# serializer version: 1
# name: test_bignumeric_literal_ok[literal_bignumeric]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bignumeric_literal	'42'
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	b""
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	b"bytes"
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_raw_cap]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	BR"bytes"
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_raw_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	br""
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_raw_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	rb"bytes"
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	b''
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	b'bytes'
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_raw_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	br''
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_raw_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	br'bytes'
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	b""""""
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	b"""We say: "hello"."""
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_raw_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	br""""""
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_raw_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	br"""We say: "hello"."""
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	b''''''
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	b'''We say: 'hello'.'''
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_raw_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	br''''''
  
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_raw_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__bytes_literal	br'''We say: 'hello'.'''
  
  '''
# ---
# name: test_float_literal_ok[literal_float_dig_dot]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__float_literal	58.
  
  '''
# ---
# name: test_float_literal_ok[literal_float_dig_dot_dig_lowere_minus_dig]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__float_literal	123.456e-67
  
  '''
# ---
# name: test_float_literal_ok[literal_float_dig_lowere_dig]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__float_literal	4e2
  
  '''
# ---
# name: test_float_literal_ok[literal_float_dot_dig_cape_dig]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__float_literal	.1E4
  
  '''
# ---
# name: test_integer_literal_ok[literal_integer_decimal]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  integer_literal	1
  
  '''
# ---
# name: test_integer_literal_ok[literal_integer_decimal_minus]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  integer_literal	-1
  
  '''
# ---
# name: test_integer_literal_ok[literal_integer_decimal_plus]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  integer_literal	+1
  
  '''
# ---
# name: test_integer_literal_ok[literal_integer_hex]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  integer_literal	0xff
  
  '''
# ---
# name: test_integer_literal_ok[literal_integer_hex_cap]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  integer_literal	0XFF
  
  '''
# ---
# name: test_integer_literal_ok[literal_integer_hex_minus]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  integer_literal	-0xff
  
  '''
# ---
# name: test_integer_literal_ok[literal_integer_hex_plus]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  integer_literal	+0xff
  
  '''
# ---
# name: test_integer_literal_ok[literal_integer_quoted_alias_adjacent]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  integer_literal	1
                as_alias
                  ident	`alias`
  
  '''
# ---
# name: test_numeric_literal_ok[literal_numeric]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__numeric_literal	'42'
  
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	""
  
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	"string"
  
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_raw_cap]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	R"string"
  
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_raw_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	r""
  
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_raw_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	r"string"
  
  '''
# ---
# name: test_string_literal_ok[literal_string_squot_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	''
  
  '''
# ---
# name: test_string_literal_ok[literal_string_squot_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	'string'
  
  '''
# ---
# name: test_string_literal_ok[literal_string_squot_raw_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	r''
  
  '''
# ---
# name: test_string_literal_ok[literal_string_squot_raw_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	r'string'
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tdquot_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	""""""
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tdquot_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	"""We say: "hello"."""
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tdquot_raw_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	r""""""
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tdquot_raw_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	r"""We say: "hello"."""
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tsquot_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	''''''
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tsquot_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	'''We say: 'hello'.'''
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tsquot_raw_empty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	r''''''
  
  '''
# ---
# name: test_string_literal_ok[literal_string_tsquot_raw_nonempty]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__string_literal	r'''We say: 'hello'.'''
  
  '''
# ---
# name: test_struct_literal_ok[literal_struct]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__struct_literal
                    bigquery__literal
                      integer_literal	1
                    bigquery__literal
                      integer_literal	2
  
  '''
# ---
# name: test_struct_literal_ok[literal_struct_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__literal
                  bigquery__struct_literal
                    bigquery__literal
                      integer_literal	1
                    bigquery__literal
                      integer_literal	2
                    bigquery__literal
                      integer_literal	3
  
  '''
# ---
